--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2"
   },
   "devDependencies": {
